alterações enviadas com sucesso

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <!-- cabeçalho -->
         <div class="container">
             <a href="index.html" class="logo">
-                <img src="img/logo.png" alt="Grow Up">
+                <img src="./img/logo.png" alt="Grow Up">
             </a>
 
             <nav>
@@ -28,22 +28,23 @@
     </header>
     <main>
         <!-- conteúdo principal -->
-        <section class="texto">
+        <section class="banner">
             <div class="container">
-                <img src="img/aplicativo.png" alt="Ilustração do time construindo um site">
+                <img src="./img/aplicativo.png" alt="Ilustração do time construindo um site">
 
                 <div class="texto">
                     <h2>Soluções perfeitas para seu Negócio</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem dignissimos libero facere
                         voluptatum suscipit, eaque veniam ab blanditiis voluptatem neque praesentium harum animi, quae
                         obcaecati voluptate magnam provident recusandae. Necessitatibus.</p>
+                    <a href="orcamento.html" class="btn-primary">Faça um orçamento</a>
                 </div>
             </div>
         </section>
     </main>
     <footer>
         <!-- rodapé -->
-        <p>copyright - Alcelina Sttefanie </p>
+        <p>copyright - Grow Up </p>
     </footer>
 </body>
 
