--- a/servicos.html
+++ b/servicos.html
@@ -14,7 +14,7 @@
         <!-- cabeçalho -->
         <div class="container">
             <a href="index.html" class="logo">
-                <img src="img/logo.png" alt="Grow Up">
+                <img src="./img/logo.png" alt="Grow Up">
             </a>
 
             <nav>
@@ -32,7 +32,7 @@
         </div>
         <section class="desenvolvimento">
             <div class="container">
-                <img src="img/ilustra-dev.png" alt="Ilustração serviço de desenvolvimento web">
+                <img src="/img/imagem.png" alt="Ilustração serviço de desenvolvimento web">
 
                 <div class="texto">
                     <h2>Desenvolvimento Web</h2>
@@ -46,7 +46,7 @@
         </section>
         <section class="marketing">
             <div class="container">
-                <img src="img/ilustra-marketing.png" alt="Ilustração serviço de Marketing">
+                <img src="./img/phoneApps.png" alt="Ilustração serviço de Marketing">
 
                 <div class="texto">
                     <h2>Marketing Digital</h2>
@@ -60,7 +60,7 @@
         </section>
         <section class="consultoria-ux">
             <div class="container">
-                <img src="img/ilustra-ux.png" alt="Ilustração serviço de UX">
+                <img src="/img/montagem.png" alt="Ilustração serviço de UX">
 
                 <div class="texto">
                     <h2>Consultoria UX</h2>
